--- a/app/index-2-2.html
+++ b/app/index-2-2.html
@@ -1,5 +1,5 @@
 <!-- 
-  7天体验课用户
+  网上店铺付费用户
   没有萌宠账号的用户
   提交成功
  -->
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-  <title>1-2</title>
+  <title>2-2 提交成功</title>
   <link rel="stylesheet" href="styles/weui/weui.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
