--- a/app/index-2-1.html
+++ b/app/index-2-1.html
@@ -33,14 +33,7 @@
     </div>
   </div>
 
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label class="weui-label" for="order-number">订单编号</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" id="order-number" type="text" placeholder="请将有赞订单编号粘贴至此处">
-      </div>
-    </div>
-  </div>
+w
 
   <div class="weui-cells weui-cells_form">
     <div class="weui-cell">
@@ -85,7 +78,7 @@
     <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">提交</a>
   </div>
 
-  <div class="weui-footer weui-footer_fixed-bottom">
+  <div class="weui-footer">
     <p class="weui-footer__text">Copyright © 2010-2018 Qooco</p>
   </div>
 
