--- a/app/index-3-3.html
+++ b/app/index-3-3.html
@@ -83,7 +83,7 @@
     <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">提交</a>
   </div>
 
-  <div class="weui-footer weui-footer_fixed-bottom">
+  <div class="weui-footer">
     <p class="weui-footer__text">Copyright © 2010-2018 Qooco</p>
   </div>
 
