--- a/app/submitsuccess.html
+++ b/app/submitsuccess.html
@@ -1,14 +1,10 @@
-<!-- 
-  网上店铺付费用户
-  没有萌宠账号的用户
-  提交成功
- -->
+
 <!doctype html>
 <html lang="zh-cn">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-  <title>2-2 提交成功</title>
+  <title>提交成功</title>
   <link rel="stylesheet" href="styles/weui/weui.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
