--- a/app/coursetype.html
+++ b/app/coursetype.html
@@ -1,26 +1,22 @@
-<!-- 
-  选择身份
- -->
+
 <!doctype html>
 <html lang="zh-cn">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-  <title>选择身份</title>
+  <title>选择课程类型</title>
   <link rel="stylesheet" href="styles/weui/weui.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body class="container" id="container"> 
   <article class="weui-article entrance">
-    <h3>亲爱的用户：</h3>
-    <h3>在开始学习前，需要您填写以下信息以便我们确认是您本人并为您开通账号和充值课程，信息保密，请放心填写。</h3>
+    <h3>您要参加的课程是？</h3>
 
-    <h3>您是否已有巧口萌宠账号？</h3>
     <div class="weui-cells weui-cells_radio">
       <label class="weui-cell weui-check__label" for="x14">
         <div class="weui-cell__bd">
-          <p>是的，我已经有巧口萌宠账号了</p>
+          <p>巧口萌宠七天体验课</p>
         </div>
         <div class="weui-cell__ft">
           <input type="radio" class="weui-check" name="radio1" id="x14">
@@ -29,7 +25,7 @@
       </label>
       <label class="weui-cell weui-check__label" for="x15">
         <div class="weui-cell__bd">
-          <p>没有，我还没有巧口萌宠账号</p>
+          <p>巧口萌宠一年课</p>
         </div>
         <div class="weui-cell__ft">
           <input type="radio" name="radio1" class="weui-check" id="x15" checked="checked">
@@ -40,7 +36,7 @@
   </article>
 
   <div class="button-sp-area">
-    <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">确定</a>
+    <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
   </div>
 
   <div class="weui-footer">
