--- a/app/submitsuccess.html
+++ b/app/submitsuccess.html
@@ -9,25 +9,27 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body class="container" id="container"> 
-  <article class="weui-article">
-    <h1>成功提交信息！</h1>
-    <h2 class="title">宝宝可以在巧口萌宠App中学习啦~</h2>
-    <div class="weui-loadmore weui-loadmore_line">
-      <span class="weui-loadmore__tips">第一步</span>
-    </div>
-    <img class="QR-code" src="./images/QR-code.png" alt="">
-    <h3>长按识别二维码，添加萌宠小秘书</h3>
-    <h3>享受配合APP的深度社群服务</h3>
-    <p>（如您已经添加萌宠小秘书微信，则直接下载App体验即可）</p>
-    <div class="weui-loadmore weui-loadmore_line">
-      <span class="weui-loadmore__tips">第二步</span>
-    </div>
-    <div class="button-sp-area">
-      <a href="javascript:;" class="weui-btn weui-btn_primary" id="">点击下载App</a>
-    </div>
-    <p>小贴士：使用手机号+密码登录App即可</p>
-  </article>
+<body class="default-bg submitsuccess-page">
+  <div class="section-box" style="padding-bottom: 1em;">
+    <article class="weui-article" style="border: none;margin-bottom:0;">
+      <h1>成功提交信息！<br/> 宝宝可以在巧口萌宠App中学习啦~</h1>
+      <p>小贴士：使用手机号+密码登录App即可</p>
+      
+      <div class="weui-loadmore weui-loadmore_line">
+        <span class="weui-loadmore__tips">第一步</span>
+      </div>
+      <img class="QR-code" src="./images/QR-code.png" alt="">
+      <p>长按识别二维码，添加萌宠小秘书</p>
+      <p>享受配合APP的深度社群服务</p>
+      <p>（如您已经添加萌宠小秘书微信，则直接下载App体验即可）</p>
+      <div class="weui-loadmore weui-loadmore_line">
+        <span class="weui-loadmore__tips">第二步</span>
+      </div>
+      <div class="button-sp-area pets-btn-area next-btn-area" style="padding-top:0;">
+        <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">点击下载APP</a>
+      </div>
+    </article>
+  </div>
 </body>
 <script type="text/javascript" src="./scripts/zepto.min.js"></script>
 <script type="text/javascript" src="./scripts/weui.min.js"></script>
