--- a/app/babyinfo.html
+++ b/app/babyinfo.html
@@ -9,36 +9,35 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body class="container" id="container"> 
-  <article class="weui-article">
-    <p>填写宝贝姓名和生日，萌宠会为您提供适合宝贝成长阶段的贴心服务哦~</p>
-  </article>
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label class="weui-label" for="baby-name">宝贝姓名</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" id="baby-name" type="text">
+<body class="default-bg"> 
+
+  <div class="section-box">
+    <article class="weui-article">
+      <p>填写宝贝姓名和生日，萌宠会为<br>您提供适合宝贝成长阶段的<br>贴心服务哦~</p>
+    </article>
+
+    <div class="weui-cells weui-cells_form">
+      <div class="weui-cell input-border">
+        <input class="weui-input" id="" type="text" placeholder="宝贝姓名">
       </div>
     </div>
-  </div>
 
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell" id="birthday-picker">
-      <div class="weui-cell__hd"><label class="weui-label">宝贝生日</label></div>
-      <div class="weui-cell__bd">
-        <p id="baby-birthday">年 / 月 / 日</p>
+    <div class="weui-cells weui-cells_form">
+      <div class="weui-cell input-border" id="birthday-picker">
+        <div class="weui-cell__bd">
+          <p id="baby-birthday">宝贝生日</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="button-sp-area">
-    <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
+    <div class="button-sp-area pets-btn-area next-btn-area">
+      <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
+    </div>
   </div>
 
   <div class="weui-footer">
     <p class="weui-footer__text">Copyright © 2010-2018 Qooco</p>
   </div>
-
 </body>
 <script type="text/javascript" src="./scripts/zepto.min.js"></script>
 <script type="text/javascript" src="./scripts/weui.min.js"></script>
