--- a/app/index_page.html
+++ b/app/index_page.html
@@ -11,46 +11,47 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body class="container" id="container"> 
-  <article class="weui-article entrance">
+<body class="container index_page" >
+  <div class="banner">
+    <img src="./images/talking_pets_bannner.jpg" alt="">
+  </div>
 
+  <article class="weui-article entrance">
     <div class="pannl-box tips-word">
       <h2 class="title">亲爱的宝妈宝爸：</h2>
       <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在开始学习前，需要您填写以下信息以便我们确认是您本人并为您开通账号和充值课程，信息保密，请放心填写。</h3>
     </div>
 
-    <div class="pannl-box account-type">
+    <div class="account-box">
       <h2 class="title">您是否已有巧口萌宠账号？</h2>
-      <div class="weui-cells weui-cells_radio">
-        
-        <label class="weui-cell weui-check__label" for="x14">
-          <div class="weui-cell__ft">
-            <input type="radio" class="weui-check" name="radio1" id="x14">
-            <span class="weui-icon-checked"></span>
+      <div class="account-type">
+        <div class="type-cell" id="have-account" >
+          <div class="img-box">
+            <img class="type-img choice-logo-false" src="./images/account-logo-false.png">
+            <img class="type-img choice-logo-true" src="./images/account-logo-true.png" style="display:none;">
+            <img class="choice-true" src="./images/choice-true.png"  style="display:none;">
+            <img class="choice-false" src="./images/choice-close.png">
           </div>
-          <div class="weui-cell__bd">
-            <p>是的，我已经有巧口萌宠账号了</p>
+          <p>是的，我已经有<br>巧口萌宠账号了</p>
+        </div>
+        <div class="type-cell" id="not-account">
+          <div class="img-box">
+            <img class="type-img choice-logo-false" src="./images/account-logo-false.png">
+            <img class="type-img choice-logo-true" src="./images/account-logo-true.png" style="display:none;">
+            <img class="choice-true" src="./images/choice-true.png" style="display:none;">
+            <img class="choice-false" src="./images/choice-close.png">
           </div>
-        </label>
+          <p>没有，我还没有<br>巧口萌宠账号</p>
+        </div>
+      </div>   
+    </div>
 
-        <label class="weui-cell weui-check__label" for="x15">
-          <div class="weui-cell__ft">
-            <input type="radio" name="radio1" class="weui-check" id="x15" checked="checked">
-            <span class="weui-icon-checked"></span>
-          </div>
-          <div class="weui-cell__bd">
-            <p>没有，我还没有巧口萌宠账号</p>
-          </div>
-        </label>
-
-      </div>
+    <div class="button-sp-area pets-btn-area">
+      <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">确定</a>
     </div>
 
   </article>
 
-  <div class="button-sp-area">
-    <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">确定</a>
-  </div>
 
   <div class="weui-footer">
     <p class="weui-footer__text">Copyright © 2010-2018 Qooco</p>
@@ -61,46 +62,25 @@
 <script type="text/javascript" src="./scripts/zepto.min.js"></script>
 <script type="text/javascript" src="./scripts/weui.min.js"></script>
 <script type="text/javascript">
-  var date = new Date()
-  var year = date.getFullYear()
-  var month = date.getMonth() + 1
-  var day = date.getDate()
-  var count_down = 60
-
-  // 宝贝生日：
-  $('#birthday-picker').on('click', function(){
-    // https://github.com/Tencent/weui.js/blob/master/docs/component/picker.md#picker
-    weui.datePicker({
-      start: '1970-01-01',
-      end: year + '-' + month + '-' + day,
-      defaultValue: [year, month, day],
-      onChange: function(res){
-        // console.log(res);
-        var data = res[0].label + res[1].label + res[2].label 
-        $('#baby-birthday').text(data)
-      },
-      onConfirm: function(res){
-        console.log(res);
-      },
-      id: 'birthday-picker'
-    });
+  $('#have-account').on('click', function() {
+    $(this).find('.choice-false').hide()
+    $(this).find('.choice-true').show()
+    $(this).find('.choice-logo-false').hide()
+    $(this).find('.choice-logo-true').show()
+    $('#not-account').find('.choice-true').hide()
+    $('#not-account').find('.choice-false').show()
+    $('#not-account').find('.choice-logo-true').hide()
+    $('#not-account').find('.choice-logo-false').show()
   })
-  
-  // 获取短信验证码 按钮
-  $('.weui-vcode-btn').on('click', function(){
-    $(this).hide()
-    $('.weui-vcode-count-down').css('display', 'inline-block')
-    var timer = setInterval(function() {
-      var count = parseInt($('.weui-vcode-count-down').text(), 10)
-      count --
-      $('.weui-vcode-count-down').text(count)
-      if(count < 0){
-        clearInterval(timer)
-        $('.weui-vcode-count-down').hide()
-        $('.weui-vcode-btn').show()
-        $('.weui-vcode-count-down').text(count_down)
-      }
-    }, 1000);
+  $('#not-account').on('click', function() {
+    $(this).find('.choice-false').hide()
+    $(this).find('.choice-true').show()
+    $(this).find('.choice-logo-false').hide()
+    $(this).find('.choice-logo-true').show()
+    $('#have-account').find('.choice-true').hide()
+    $('#have-account').find('.choice-false').show()
+    $('#have-account').find('.choice-logo-true').hide()
+    $('#have-account').find('.choice-logo-false').show()
   })
 
   // 提交按钮
