--- a/app/registeraccount.html
+++ b/app/registeraccount.html
@@ -9,34 +9,33 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body class="container" id="container"> 
-  <article class="weui-article">
-    <p>请填写手机号为您的巧口萌宠注册账号</p>
-  </article>
+<body class="default-bg">
+  <div class="section-box">
+    <article class="weui-article">
+      <p>请填写手机号为您的<br/> 巧口萌宠注册账号</p>
+    </article>
 
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label class="weui-label" for="phone-number">手机号码</label></div>
-      <div class="weui-cell__bd">
+    <div class="weui-cells weui-cells_form">
+      <div class="weui-cell input-border">
         <input class="weui-input" id="phone-number" type="number" pattern="[0-9]*" placeholder="请填写手机号">
       </div>
     </div>
-  </div>
 
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell weui-cell_vcode">
-      <div class="weui-cell__bd">
-        <input class="weui-input" id="phone-code" type="number" pattern="[0-9]*" placeholder="请填写短信验证码">
-      </div>
-      <div class="weui-cell__ft">
-        <label class="weui-vcode-btn" for="phone-code">获取验证码</label>
-        <label class="weui-vcode-count-down">60</label>
+    <div class="weui-cells weui-cells_form">
+      <div class="weui-cell_vcode">
+        <div class="weui-cell input-border input-code">
+          <input class="weui-input " id="phone-code" type="number" pattern="[0-9]*" placeholder="请填写验证码">
+        </div>
+        <div class="weui-cell__ft code-btn">
+          <label class="weui-vcode-btn input-border" for="phone-code">获取验证码</label>
+          <label class="weui-vcode-count-down">60</label>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="button-sp-area">
-    <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
+    <div class="button-sp-area pets-btn-area next-btn-area">
+      <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
+    </div>
   </div>
 
   <div class="weui-footer">
