--- a/app/registerpwd.html
+++ b/app/registerpwd.html
@@ -9,31 +9,26 @@
    <link rel="stylesheet" href="styles/main.css">
  </head>
  
- <body class="container" id="container"> 
-  <article class="weui-article entrance">
-    <h3>请填写您已有的巧口萌宠账号和密码</h3>
-  </article>
+<body class="default-bg"> 
+  <div class="section-box">
+    <article class="weui-article">
+      <p>注册成功!<br>请设置您的萌宠登录密码</p>
+    </article>
 
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label class="weui-label" for="account">设置密码</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" id="account" type="text" placeholder="请输入账号">
+    <div class="weui-cells weui-cells_form">
+      <div class="weui-cell input-border">
+        <input class="weui-input" id="password" type="password" placeholder="设置密码">
       </div>
     </div>
-  </div>
- 
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label class="weui-label" for="password">确认密码</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" id="password" type="password" placeholder="请输入密码">
+    <div class="weui-cells weui-cells_form">
+      <div class="weui-cell input-border">
+        <input class="weui-input" id="password" type="password" placeholder="确认密码">
       </div>
     </div>
-  </div>
- 
-  <div class="button-sp-area">
-    <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
+  
+    <div class="button-sp-area pets-btn-area next-btn-area">
+      <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
+    </div>
   </div>
 
   <div class="weui-footer">
