--- a/app/index_page.html
+++ b/app/index_page.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="container index_page" >
+  <div class="background-bg"></div>
   <div class="banner">
     <img src="./images/talking_pets_bannner.jpg" alt="">
   </div>
