--- a/app/coursetype.html
+++ b/app/coursetype.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="default-bg"> 
-  <div class="section-box">
+  <div class="section-box" style="padding-bottom: 3.2em;">
     <article class="weui-article">
       <p>您要参加的课程是？</p>
     </article>
@@ -19,8 +19,8 @@
       <div class="type-cell" id="seven-day">
         <div class="img-box">
           <img class="type-img" src="./images/seven-day.png">
-          <img class="choice-true" src="./images/choice-true.png">
-          <img class="choice-false" src="./images/choice-false.png" style="display:none;">
+          <img class="choice-true" src="./images/choice-true.png" style="display:none;">
+          <img class="choice-false" src="./images/choice-false.png">
         </div>
         <p>巧口萌宠<br>七天体验课</p>
       </div>
