--- a/app/registeraccount.html
+++ b/app/registeraccount.html
@@ -16,9 +16,10 @@
     </article>
 
     <div class="weui-cells weui-cells_form">
-      <div class="weui-cell input-border">
+      <div id="phone-input-box" class="weui-cell input-border">
         <input class="weui-input" id="phone-number" type="number" pattern="[0-9]*" placeholder="请填写手机号">
       </div>
+      <!-- <p class="err-prompt">此账号已被注册，请返回上页重新选择，若忘记密码，可到巧口萌宠App短信验证找回</p>  -->
     </div>
 
     <div class="weui-cells weui-cells_form">
@@ -27,8 +28,8 @@
           <input class="weui-input " id="phone-code" type="number" pattern="[0-9]*" placeholder="请填写验证码">
         </div>
         <div class="weui-cell__ft code-btn">
-          <label class="weui-vcode-btn input-border" for="phone-code">获取验证码</label>
-          <label class="weui-vcode-count-down">60</label>
+          <label id="weui-vcode-btn" class="weui-vcode-btn input-border">获取验证码</label>
+          <label id="count-down" class="weui-vcode-btn weui-vcode-count-down input-border" style="display: none">10</label>
         </div>
       </div>
     </div>
@@ -45,64 +46,58 @@
 </body>
 <script type="text/javascript" src="./scripts/zepto.min.js"></script>
 <script type="text/javascript" src="./scripts/weui.min.js"></script>
-<script type="text/javascript">
-  var date = new Date()
-  var year = date.getFullYear()
-  var month = date.getMonth() + 1
-  var day = date.getDate()
-  var count_down = 60
+<script type="text/javascript" src="./scripts/reg.js"></script>
 
-  // 宝贝生日：
-  $('#birthday-picker').on('click', function(){
-    // https://github.com/Tencent/weui.js/blob/master/docs/component/picker.md#picker
-    weui.datePicker({
-      start: '1970-01-01',
-      end: year + '-' + month + '-' + day,
-      defaultValue: [year, month, day],
-      onChange: function(res){
-        // console.log(res);
-        var data = res[0].label + res[1].label + res[2].label 
-        $('#baby-birthday').text(data)
-      },
-      onConfirm: function(res){
-        console.log(res);
-      },
-      id: 'birthday-picker'
-    });
-  })
+<script type="text/javascript">
+  var COUNT_DOWN = 10
   
+  // 手机号 input
+  $('#phone-number').on('focus', function() {
+    $(this).parents('.weui-cells').find('.err-prompt').remove()
+  })
+
+
   // 获取短信验证码 按钮
-  $('.weui-vcode-btn').on('click', function(){
-    $(this).hide()
-    $('.weui-vcode-count-down').css('display', 'inline-block')
-    var timer = setInterval(function() {
-      var count = parseInt($('.weui-vcode-count-down').text(), 10)
-      count --
-      $('.weui-vcode-count-down').text(count)
-      if(count < 0){
-        clearInterval(timer)
-        $('.weui-vcode-count-down').hide()
-        $('.weui-vcode-btn').show()
-        $('.weui-vcode-count-down').text(count_down)
-      }
-    }, 1000);
+  $('#weui-vcode-btn').on('click', function(){
+    var phone_number = $('#phone-number').val()
+    ERRPrompt('PHONE_NUMBER', phone_number )
+    if ( isPoneAvailable( phone_number ) ) {
+      $(this).hide()
+      $('#count-down').css('display', 'inline-block')
+      $('#phone-code').focus()
+      var timer = setInterval(function() {
+        var count = parseInt($('#count-down').text(), 10)
+        count --
+        $('#count-down').text(count)
+        if(count <= 0){
+          clearInterval(timer)
+          $('#count-down').hide()
+          $('#weui-vcode-btn').show()
+          $('#count-down').text(COUNT_DOWN)
+        }
+      }, 1000);
+    }
   })
 
   // 提交按钮
   $('#save').on('click', function(){
-    var loading = weui.loading('提交中...', {
-      className: 'save'
-    });
-    setTimeout(function () {
-      loading.hide(function() {
-        console.log('`loading` has been hidden');
-      });
-      weui.toast('提交成功', {
-        duration: 1000,
-        className: 'custom-classname',
-        callback: function(){ console.log('close') }
-      });
-    }, 3000);
+    // var loading = weui.loading('提交中...', {
+    //   className: 'save'
+    // });
+    // setTimeout(function () {
+    //   loading.hide(function() {
+    //     console.log('`loading` has been hidden');
+    //   });
+    //   weui.toast('提交成功', {
+    //     duration: 1000,
+    //     className: 'custom-classname',
+    //     callback: function(){ console.log('close') }
+    //   });
+    // }, 3000);
+
+    var phone_number = $('#phone-number').val()
+    var phone_code = $('#phone-code').val()
+    
   })
   
 </script>
