--- a/app/sendaddr.html
+++ b/app/sendaddr.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="default-bg"> 
-  <div class="section-box">
+  <div class="section-box" style="padding-bottom: 3.3em;">
     <article class="weui-article">
       <p>请务必详细填写您的收货地址，以便于<br>我们为您邮寄一年课中的辅助学习资料</p>
     </article>
