--- a/app/submitsuccess.html
+++ b/app/submitsuccess.html
@@ -30,6 +30,9 @@
       </div>
     </article>
   </div>
+  <div class="weui-footer">
+    <p class="weui-footer__text">Copyright © 2010-2018 Qooco</p>
+  </div>
 </body>
 <script type="text/javascript" src="./scripts/zepto.min.js"></script>
 <script type="text/javascript" src="./scripts/weui.min.js"></script>
