--- a/app/bindaccount.html
+++ b/app/bindaccount.html
@@ -37,7 +37,10 @@
       <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">下一步</a>
     </div>
   </div>
-
+  
+  <div class="weui-footer">
+    <p class="weui-footer__text">Copyright © 2010-2018 Qooco</p>
+  </div>
 </body>
 <script type="text/javascript" src="./scripts/zepto.min.js"></script>
 <script type="text/javascript" src="./scripts/weui.min.js"></script>
