--- a/app/babyinfo.html
+++ b/app/babyinfo.html
@@ -17,8 +17,8 @@
     </article>
 
     <div class="weui-cells weui-cells_form">
-      <div class="weui-cell input-border">
-        <input class="weui-input" id="" type="text" placeholder="宝贝姓名">
+      <div class="weui-cell input-border" id="name-box">
+        <input class="weui-input" id="baby-name" type="text" placeholder="宝贝姓名">
       </div>
     </div>
 
