--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 <body class="container" id="container"> 
   <ul>
     <li><a href="./index_page.html">选择身份</a></li>
-    <li><a href="./registeraccount.html">巧口萌宠账号注册</a></li>
+    <li><a href="./register.html">巧口萌宠账号注册</a></li>
     <li><a href="./registerpwd.html">设置登录密码</a></li>
     <li><a href="./login.html">巧口萌宠账号登录</a></li>
     <li><a href="./bindaccount.html">手机号绑定</a></li>
