--- a/app/index_page.html
+++ b/app/index_page.html
@@ -102,7 +102,7 @@
     if (ACCOUNT_STATUS == null) {
       weui.confirm('请选择您是否已有巧口账号！');
     } else if (ACCOUNT_STATUS == false) {
-      location.href = '/registeraccount.html'
+      location.href = '/register.html'
     } else {
       location.href = '/login.html'
     }
