--- a/app/registerpwd.html
+++ b/app/registerpwd.html
@@ -16,13 +16,13 @@
     </article>
 
     <div class="weui-cells weui-cells_form">
-      <div class="weui-cell input-border">
+      <div class="weui-cell input-border" id="password-box">
         <input class="weui-input" id="password" type="password" placeholder="设置密码">
       </div>
     </div>
     <div class="weui-cells weui-cells_form">
-      <div class="weui-cell input-border">
-        <input class="weui-input" id="password" type="password" placeholder="确认密码">
+      <div class="weui-cell input-border" id="passwordR-box">
+        <input class="weui-input" id="passwordR" type="password" placeholder="确认密码">
       </div>
     </div>
   
@@ -38,48 +38,66 @@
  </body>
  <script type="text/javascript" src="./scripts/zepto.min.js"></script>
  <script type="text/javascript" src="./scripts/weui.min.js"></script>
+ <script type="text/javascript" src="./scripts/main.js"></script>
+
  <script type="text/javascript">
-   var date = new Date()
-   var year = date.getFullYear()
-   var month = date.getMonth() + 1
-   var day = date.getDate()
-   var count_down = 60
+    var password = ''
+    var passwordR = ''
+    var min_length = 6
+    var max_length = 18
+    var username
+
+    $('#password, #passwordR').on('focus', function() {
+      $(this).parents('.weui-cells').find('.err-prompt').remove()
+    })
+
+    $('#password').on('blur', function() {
+      password = $(this).val()
+      if ( password.length < min_length ) {
+        ERRPrompt('Password_Min', '')
+      } else if( password.length > max_length ) {
+        ERRPrompt('Password_Max', '')
+      }
+    })
+
+    $('#passwordR').on('blur', function() {
+      passwordR = $(this).val()
+      if (password !== passwordR) {
+        ERRPrompt('Password_Differ', '')
+      }
+    })
  
-   // 宝贝生日：
-   $('#birthday-picker').on('click', function(){
-     // https://github.com/Tencent/weui.js/blob/master/docs/component/picker.md#picker
-     weui.datePicker({
-       start: '1970-01-01',
-       end: year + '-' + month + '-' + day,
-       defaultValue: [year, month, day],
-       onChange: function(res){
-         // console.log(res);
-         var data = res[0].label + res[1].label + res[2].label 
-         $('#baby-birthday').text(data)
-       },
-       onConfirm: function(res){
-         console.log(res);
-       },
-       id: 'birthday-picker'
-     });
-   })
-   
-   // 提交按钮
-   $('#save').on('click', function(){
-     var loading = weui.loading('提交中...', {
-       className: 'save'
-     });
-     setTimeout(function () {
-       loading.hide(function() {
-         console.log('`loading` has been hidden');
-       });
-       weui.toast('提交成功', {
-         duration: 1000,
-         className: 'custom-classname',
-         callback: function(){ console.log('close') }
-       });
-     }, 3000);
-   })
+    // 提交按钮
+    $('#save').on('click', function(){
+      username = sessionStorage.getItem('username')
+      var data = {
+        phone: username,
+        pw: passwordR,
+        username: username
+      }
+      $.ajax({
+        type: 'POST',
+        url: IP + 'youzan-qp-web/userRegister',
+        data: JSON.stringify(data),
+        contentType: 'application/json',
+        success: function(res){
+          if ( res.status ) {
+            weui.toast('密码设置成功', {
+              duration: 1500,
+              className: 'password-initialization-success',
+              callback: function(){
+                location.href = '/babyinfo.html'
+              }
+            });
+          } else {
+            weui.confirm( ERR_TEXT.Phone_Number_Registar )
+          }
+        },
+        error: function(xhr, type){
+          weui.confirm( '网络出错!<br>请重试' )
+        }
+      })
+    })
    
  </script>
  </html>
